# Data-Sctructure-Project

./: CMakeLists.txt  DynamicArrayList.cpp  DynamicArrayList.h  FileHandler.cpp  FileHandler.h  MenuItem.cpp  MenuItem.h  Order.cpp  Order.h  Queue.cpp  Queue.h  README.md  Stack.cpp  Stack.h  main.cpp  menu.txt
